Added 28421 around numbers in table

--- a/latex/CEUR/paper.tex
+++ b/latex/CEUR/paper.tex
@@ -396,14 +396,14 @@ The AUROC and AUPR values measured for the task of misclassification detection c
 \hline
 \multirow{2}{*}{Model}  & \multicolumn{5}{c}{AUROC}\vline&\multicolumn{5}{c}{AUPR}        \\
                         & Vac. & Dis. & Ale. & Epi. & Ent. & Vac. & Dis. & Ale. & Epi. & Ent. \\ \hline 
-S-BGCN-T-K (superpixel prior) & $0.676$ & $0.801$ &$0.792$&$0.509$&$0.798$&0.352&0.398&0.467&0.237&0.474    \\
-S-BGCN-T-K (pixel prior) & $0.908$ & $0.840$ &$0.905$&$0.451$&$\mathbf{0.912}$&0.659&0.545&0.649&0.206&0.672  \\
-S-BGCN-T & $0.729$ & $0.834$ &$0.869$&$0.618$&$0.861$&0.451&0.484&0.591&0.278&0.579  \\ 
-S-BGCN & $0.760$ & $0.877$ &$0.894$&$0.623$&$0.886$&0.489&0.558&0.633&0.268&0.616  \\ 
-S-GCN & $0.729$ & $0.842$ &-&-&$0.859$&0.472&0.538&-&-&0.595  \\ 
-S-MLP &$0.845$&$0.904$&-&-&$0.909$&0.417&0.566&-&-&0.606  \\
-GCN & - & - &-&-&$0.887$&-&-&-&-&0.606  \\ 
-Drop-GCN & - & - &$0.897$&$0.552$&$0.887$&-&-&0.619&0.243&0.600  \\ \hline
+S-BGCN-T-K (superpixel prior) & $0.676$ & $0.801$ &$0.792$&$0.509$&$0.798$&$0.352$&$0.398$&$0.467$&$0.237$&$0.474$    \\
+S-BGCN-T-K (pixel prior) & $0.908$ & $0.840$ &$0.905$&$0.451$&$\mathbf{0.912}$&$0.659$&$0.545$&$0.649$&$0.206$&$\mathbf{0.672}$  \\
+S-BGCN-T & $0.729$ & $0.834$ &$0.869$&$0.618$&$0.861$&$0.451$&$0.484$&$0.591$&$0.278$&$0.579$  \\ 
+S-BGCN & $0.760$ & $0.877$ &$0.894$&$0.623$&$0.886$&$0.489$&$0.558$&$0.633$&$0.268$&$0.616$  \\ 
+S-GCN & $0.729$ & $0.842$ &-&-&$0.859$&$0.472$&$0.538$&-&-&$0.595$  \\ 
+S-MLP &$0.845$&$0.904$&-&-&$0.909$&$0.417$&$0.566$&-&-&$0.606$  \\
+GCN & - & - &-&-&$0.887$&-&-&-&-&$0.606$  \\ 
+Drop-GCN & - & - &$0.897$&$0.552$&$0.887$&-&-&$0.619$&$0.243$&$0.600$  \\ \hline
 \end{tabular}
 \end{center}
 \end{table*}
