Removed reference to legend table from fig::gt caption

--- a/latex/CEUR/paper.tex
+++ b/latex/CEUR/paper.tex
@@ -335,7 +335,7 @@ The classes which do not appear in the subsection of the dataset but exist withi
 \begin{figure}[!t]
 \centering
 \includegraphics[width=\columnwidth]{figures/gt.jpg}
-\caption{Ground truth data with colors depicting classes as defined in Table \ref{tab::classes}. The subset area of the 2018 IEEE GRSS Data Fusion Challenge dataset covers the region with lower-left coordinate 272956, 3289689 and upper-right coordinate 273856, 3290290 (coordinates given in the NAD83 / UTM zone 15N Coordinate Reference System).}
+\caption{Ground truth data with colors depicting land cover classes. The subset area of the 2018 IEEE GRSS Data Fusion Challenge dataset covers the region with lower-left coordinate 272956, 3289689 and upper-right coordinate 273856, 3290290 (coordinates given in the NAD83 / UTM zone 15N Coordinate Reference System).}
 \label{fig::gt}
 \end{figure}
 
